-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 21.0.5, 23, 24
-
Component/s: hotspot
-
b06
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8337373 | 23.0.2 | Patricio Chilano Mateo | P2 | Resolved | Fixed | b01 |
| JDK-8337920 | 23.0.1 | Patricio Chilano Mateo | P2 | Resolved | Fixed | b06 |
| JDK-8335557 | 23 | Patricio Chilano Mateo | P2 | Resolved | Fixed | b32 |
| JDK-8342093 | 21.0.6-oracle | Yagmur Eren | P2 | Closed | Fixed | b02 |
| JDK-8339073 | 21.0.5 | Aleksey Shipilev | P2 | Resolved | Fixed | master |
There is one case in JFR code where this kind of allocation happens: https://github.com/openjdk/jdk/blob/d9bcf061450ebfb7fe02b5a50c855db1d9178e5d/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleWriter.cpp#L462. We allocate for the names of JavaThreads in the closure and then we later retrieve them after traversing all frames from all threads: https://github.com/openjdk/jdk/blob/d9bcf061450ebfb7fe02b5a50c855db1d9178e5d/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleWriter.cpp#L328
- backported by
-
JDK-8335557 Can't allocate and retain memory from resource area in frame::oops_interpreted_do oop closure after 8329665
-
- Resolved
-
-
JDK-8337373 Can't allocate and retain memory from resource area in frame::oops_interpreted_do oop closure after 8329665
-
- Resolved
-
-
JDK-8337920 Can't allocate and retain memory from resource area in frame::oops_interpreted_do oop closure after 8329665
-
- Resolved
-
-
JDK-8339073 Can't allocate and retain memory from resource area in frame::oops_interpreted_do oop closure after 8329665
-
- Resolved
-
-
JDK-8342093 Can't allocate and retain memory from resource area in frame::oops_interpreted_do oop closure after 8329665
-
- Closed
-
- relates to
-
JDK-8329665 fatal error: memory leak: allocating without ResourceMark
-
- Resolved
-
- links to
-
Commit(jdk23)
openjdk/jdk/d7b7c172
-
Commit(master)
openjdk/jdk21u-dev/db914b77
-
Commit(master)
openjdk/jdk/7ab96c74
-
Review(jdk23)
openjdk/jdk/20185
-
Review(master)
openjdk/jdk21u-dev/942
-
Review(master)
openjdk/jdk/20012